# teleprompter

./: .buildconfig  .gitignore  README.md  com.github.nokse22.teleprompter.json  io.github.nokse22.teleprompter.json  meson.build
.github/workflows/: flatpak.yml
data/: com.github.nokse22.teleprompter.appdata.xml.in  com.github.nokse22.teleprompter.desktop.in  com.github.nokse22.teleprompter.gschema.xml  io.github.nokse22.teleprompter.appdata.xml.in  io.github.nokse22.teleprompter.desktop.in  io.github.nokse22.teleprompter.gschema.xml  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES  Teleprompter.pot  bg.po  de_DE.po  es.po  fr.po  he.po  hi.po  hr.po  it.po  kk.po  meson.build  nl.po  ru.po  teleprompter.pot  template.pot  tr.po  uk_UA.po
src/: dark.css  main.py  meson.build  osc_server.py  preferences.py  scroll_text_view.py  style.css  teleprompter.gresource.xml  teleprompter.in  window.py  window.ui
src/gtk/: help-overlay.blp  help-overlay.ui  preferences.blp  scroll_text_view.blp  scroll_text_view.ui  shortcuts.blp  window.blp  window.ui
